[package]
name = "nft-candy-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_candy_machine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.14.0"
getrandom = { version = "0.2.2", features = ["custom"] }
rand = "0.8"
